[package]
name = "emeals_getter"
version = "0.1.0"
authors = ["Matthew Caron <matt@mattcaron.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = [ "blocking" ] }
structopt = "0.3"
tokio = { version = "0.3", features = [ "rt", "rt-multi-thread" ] }
