[package]
name = "emeals_getter"
version = "0.1.0"
authors = ["Matthew Caron <matt@mattcaron.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
select = "0.6"
structopt = "0.3"